--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -2,13 +2,14 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-top: 20px;
 }
 
 .Infected {
   border: 1px solid rgb(174, 173, 173);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  width: 25%;
+  width: 15%;
   padding: 10px;
   margin-top: 20px;
 }
@@ -26,7 +27,7 @@
   border: 1px solid rgb(174, 173, 173);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  width: 25%;
+  width: 15%;
   padding: 10px;
   margin-top: 20px;
 }
@@ -44,7 +45,7 @@
   border: 1px solid rgb(174, 173, 173);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  width: 25%;
+  width: 15%;
   padding: 10px;
   margin-top: 20px;
 }
